@@ -199,3 +199,5 @@ Details of changes made to refnx
 ------
 - allow master and slave chopper parameters to be ignored in PLP reduction.
 - tunable t_0 offset in PLP/SPZ reduction.
+- possibly_create_parameter accepts default bounds/vary/constraint. This fixes
+  a bug in MixedSlab.
